# Glitter

./: .gitmodules  CMakeLists.txt
include/Glitter/: glitter.h
src/Sources/: main.cpp
